# p4c

./: MODULE.bazel
bazel/: p4_library.bzl
