module(
    name = "p4c",
    bazel_compatibility = [">=7.4.1"],
    repo_name = "com_github_p4lang_p4c",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20250604-de157ca3",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "grpc",
    version = "1.68.0",
    repo_name = "com_github_grpc_grpc",
)
bazel_dep(
    name = "protobuf",
    version = "29.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "re2", version = "2025-08-12", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "gutil", version = "20250502.0", repo_name = "com_google_gutil")
bazel_dep(name = "abseil-cpp", version = "20210324.2", repo_name = "com_google_absl")
bazel_dep(name = "p4runtime", repo_name = "com_github_p4lang_p4runtime")
